dnl Process this file with autoconf to produce a configure script.
AC_INIT(rwlock.c)

AM_INIT_AUTOMAKE(pthread_rwlock_fcfs, 0.4.0)

AM_PROG_LIBTOOL

dnl Checks for programs.
AC_PROG_CC


dnl Checks for libraries.
dnl Replace `main' with a function in -lpthread:
AC_CHECK_LIB(pthread, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h unistd.h)

debug_rwlock=no

AC_ARG_ENABLE(debug-rwlock,
 [  --enable-debug-rwlock  Enable an RWLock that prints debug notices on the screen. This is a debugging feature which should not be usually enabled],
 [ debug_rwlock=yes
 ])

if test "x$debug_rwlock" = "xyes" ; then
    AC_DEFINE(PTHREAD_RWLOCK_FCFS_DEBUG)
fi

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_CHECK_FUNCS(gettimeofday)

AC_OUTPUT([Makefile man/Makefile])
